# ark-invest-api-rust

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  flake.nix  justfile
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.forgejo/workflows/: crane.yml  docker.yml
.github/workflows/: crane.yml  docker.yml
src/: main.rs  routes.rs
src/routes/: polars_utils.rs
