[package]
name = "ark-invest-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.45", features = [
    "lazy",
    "strings",
    "parquet",
    "round_series",
    "serde",
    "json",
] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
aide = { version = "0.13", features = ["redoc", "axum"] }
schemars = { version = "0.8", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
glob = { version = "0.3" }
strum_macros = "0.26"
tower = { version = "0.5", features = ["limit", "buffer", "util"] }
tower-http = { version = "0.6", features = ["compression-zstd", "cors"] }
tower_governor = "0.5"
lazy_static = "1.5"
