[package]
name = "ark-invest-api-rust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "3"
members = ["."]

[workspace.lints.clippy]
cognitive-complexity = "allow"
correctness = { level = "warn", priority = -1 }
future_not_send = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = { level = "warn", priority = -1 }
option_if_let_else = { level = "warn", priority = -1 }
or_fun_call = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
return_self_not_must_use = "allow"
style = { level = "warn", priority = -1 }
too-many-lines = "allow"
unreadable_literal = "allow"

[workspace.lints.rust]
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[dependencies]
aide = { version = "0.13", features = ["axum", "redoc"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.45", features = [
  "json",
  "lazy",
  "parquet",
  "round_series",
  "serde",
  "strings",
] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.26"
tokio = { version = "1.49", features = ["full"] }
tower = { version = "0.5", features = ["buffer", "limit", "util"] }
tower_governor = "0.5"
tower-http = { version = "0.6", features = ["compression-zstd", "cors"] }

[lints]
workspace = true
